--- a/index.html
+++ b/index.html
@@ -1,119 +1,128 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>AK 2048</title>
 
-  <link href="style/main.css" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="favicon.ico">
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Pan2048 : Pan clone of 2048 (https://github.com/gabrielecirulli/2048)" />
 
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-</head>
-<body>
-  <div class="container">
-    <div class="heading">
-      <h1 class="title">AK 2048</h1>
-      <div class="scores-container">
-        <div class="score-container">0</div>
-        <div class="best-container">0</div>
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Pan2048</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Herhangi/pan2048">View on GitHub</a>
+
+          <h1 id="project_title">Pan2048</h1>
+          <h2 id="project_tagline">Pan clone of 2048 (https://github.com/gabrielecirulli/2048)</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Herhangi/pan2048/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Herhangi/pan2048/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>&lt;!DOCTYPE html&gt;
+
+</p>
+  Pan2048<p></p>
+
+<p></p>
+  <div>
+    <div>
+      <h1>
+<a name="pan2048" class="anchor" href="#pan2048"><span class="octicon octicon-link"></span></a>Pan2048</h1>
+      <div>
+        <div>0</div>
+        <div>0</div>
       </div>
     </div>
-    <div class="heading">
-	  <p class="game-intro">HEDEF 2048</p>
-      <div class="scores-container">
-        <a href="https://play.google.com/store/apps/details?id=org.ak2048.game" target="_blank">
-			<img src="img/en_generic_rgb_wo_60.png" alt="get in on Google play" />
-		</a>
-      </div>
+    <p>Cerooooo!</p>
+
+<pre><code>&lt;div class="game-container"&gt;
+  &lt;div class="game-message"&gt;
+    &lt;p&gt;&lt;/p&gt;
+    &lt;div class="lower"&gt;
+        &lt;a class="keep-playing-button"&gt;&lt;/a&gt;
+      &lt;a class="retry-button"&gt;Bu hafta da sabahlayalım!&lt;/a&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+
+  &lt;div class="grid-container"&gt;
+    &lt;div class="grid-row"&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-row"&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-row"&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-row"&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+      &lt;div class="grid-cell"&gt;&lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+
+  &lt;div class="tile-container"&gt;
+
+  &lt;/div&gt;
+&lt;/div&gt;
+
+&lt;p class="game-explanation"&gt;
+  &lt;strong class="important"&gt;Nasıl oynanır?&lt;/strong&gt;
+&lt;/p&gt;
+&lt;p&gt;
+  &lt;strong&gt;Yön tuşları&lt;/strong&gt;nı kullanarak &lt;strong&gt;aynı&lt;/strong&gt; kardoları birleştir, &lt;strong&gt;BIG BOSS&lt;/strong&gt;'a ulaş.
+&lt;/p&gt;
+&lt;hr&gt;
+&lt;p&gt;
+&lt;strong&gt;2048&lt;/strong&gt; &lt;a href="http://gabrielecirulli.com" target="_blank"&gt;Gabriele Cirulli&lt;/a&gt;'nin ürettiği bir oyundur.
+&lt;/p&gt;
+&lt;p&gt;
+&lt;strong&gt;PAN&lt;/strong&gt;laştırmayı gerçekleştiren: &lt;a href="https://github.com/herhangi" target="_blank"&gt;Herhangi&lt;/a&gt;.
+&lt;/p&gt;
+&lt;p&gt;
+&lt;a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank"&gt;1024&lt;/a&gt; ve konsept olarak benzeri &lt;a href="http://asherv.com/threes/" target="_blank"&gt;Threes&lt;/a&gt; oyunlarından yola çıkılmıştır.
+&lt;/p&gt;
+</code></pre>
+
+<p></p>
+</div>
+
+<p></p>
+      </section>
     </div>
 
-    <div class="game-container">
-      <div class="game-message">
-        <p></p>
-        <div class="lower">
-	        <a class="keep-playing-button">EVT BBCM</a>
-          <a class="retry-button">BBCM ANLMDM?</a>
-        </div>
-      </div>
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Pan2048 maintained by <a href="https://github.com/Herhangi">Herhangi</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      <div class="grid-container">
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-        <div class="grid-row">
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-          <div class="grid-cell"></div>
-        </div>
-      </div>
+    
 
-      <div class="tile-container">
-
-      </div>
-	</div>
-
-    <p class="game-explanation">
-      <strong class="important">Nasıl oynanır?</strong>
-	</p>
-	<p>
-	  <strong>Yön tuşları</strong>nı kullanarak <strong>aynı</strong> kardoları birleştir, <strong>BÜYÜK BAŞGAN</strong>'a ulaş.
-    </p>
-    <hr>
-    <p>
-    <strong>2048</strong> <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>'nin ürettiği bir oyundur.
-	</p>
-	<p>
-	<strong>AK</strong>laştırmayı gerçekleştiren: <a href="https://github.com/onatm" target="_blank">Onat Yiğit Mercan</a>.
-    </p>
-	<p>
-	<a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024</a> ve konsept olarak benzeri <a href="http://asherv.com/threes/" target="_blank">Threes</a> oyunlarından yola çıkılmıştır.
-    </p>
-	<p>
-	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://onatm.github.io/ak2048/" data-text="2048'in sınırı AK 2048." data-hashtags="ak2048">Tweet</a>
-	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    <a href="https://twitter.com/0xfadedead" class="twitter-follow-button" data-show-count="false">Follow @0xfadedead</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-	</p>
-  </div>
-
-  <script src="js/animframe_polyfill.js"></script>
-  <script src="js/keyboard_input_manager.js"></script>
-  <script src="js/html_actuator.js"></script>
-  <script src="js/grid.js"></script>
-  <script src="js/tile.js"></script>
-  <script src="js/local_score_manager.js"></script>
-  <script src="js/game_manager.js"></script>
-  <script src="js/application.js"></script>
-  
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-49218920-1']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-  </script>
-</body>
+  </body>
 </html>
